Оживила слайдер с услугами

--- a/catalog.html
+++ b/catalog.html
@@ -35,12 +35,12 @@
         </div>
         <ul class="site-navigation">
           <li class="site-navigation-item site-navigation-catalog">
-            <a class="site-navigation-link site-catalog-link" href="catalog.html">Каталог товаров</a>
+            <a class="site-navigation-link site-catalog-link" href="#">Каталог товаров</a>
             <div class="dropdown-container">
               <ul class="dropdown-navigation">
                 <li class="dropdown-item">
                   <a class="dropdown-navigation-link" href="blank.html">Виртуальная реальность</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Моноподы для селфи</a>
+                  <a class="dropdown-navigation-link">Моноподы для селфи</a>
                   <a class="dropdown-navigation-link" href="blank.html">Экшн-камеры</a>
                 </li>
                 <li class="dropdown-item">
@@ -170,7 +170,9 @@
                     </a>
                     <p class="sorting-products-price">1 100 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
+                  <div class="sorting-products-image-wrapper">
+                    <img class="sorting-products-image" src="img/item-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
+                  </div>
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
@@ -183,7 +185,9 @@
                     </a>
                     <p class="sorting-products-price">1 500 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
+                  <div class="sorting-products-image-wrapper">
+                    <img class="sorting-products-image" src="img/item-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
+                  </div>
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
@@ -196,7 +200,9 @@
                     </a>
                     <p class="sorting-products-price">1 500 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
+                  <div class="sorting-products-image-wrapper">
+                    <img class="sorting-products-image" src="img/item-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
+                  </div>
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
@@ -209,7 +215,9 @@
                     </a>
                     <p class="sorting-products-price">1 900 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+                  <div class="sorting-products-image-wrapper">
+                    <img class="sorting-products-image" src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+                  </div>
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
