--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <ul class="dropdown-navigation">
                 <li class="dropdown-item">
                   <a class="dropdown-navigation-link" href="blank.html">Виртуальная реальность</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Моноподы для селфи</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Моноподы для селфи</a>
                   <a class="dropdown-navigation-link" href="blank.html">Экшн-камеры</a>
                 </li>
                 <li class="dropdown-item">
@@ -149,7 +149,7 @@
             <a class="popular-link popular-virtual" href="blank.html">Виртуальная реальность</a>
           </li>
           <li>
-            <a class="popular-link popular-monopods" href="blank.html">Моноподы<br> для селфи</a>
+            <a class="popular-link popular-monopods" href="catalog.html">Моноподы<br> для селфи</a>
           </li>
           <li>
             <a class="popular-link popular-action" href="blank.html">Экшн-камеры</a>
@@ -169,14 +169,14 @@
         <div class="services-container">
           <h2 class="visually-hidden">Услуги нашего магазина</h2>
           <ul class="services-buttons-list">
-            <li>
-              <a class="button services-button services-button-active" href="#">Доставка</a>
+            <li class="services-buttons-item">
+              <a class="button services-button services-button-active" href="#" data-slider="services-item-delivery">Доставка</a>
             </li>
-            <li>
-              <a class="button services-button" href="#">Гарантия</a>
+            <li class="services-buttons-item">
+              <a class="button services-button" href="#" data-slider="services-item-warranty">Гарантия</a>
             </li>
-            <li>
-              <a class="button services-button" href="#">Кредит</a>
+            <li class="services-buttons-item">
+              <a class="button services-button" href="#" data-slider="services-item-credit">Кредит</a>
             </li>
           </ul>
           <ul class="services-list">
@@ -235,7 +235,7 @@
         <section class="contacts about-contacts-column">
           <h2 class="contacts-heading">Контакты</h2>
           <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <a class="contacts-map-link" href="blank.html">
+          <a class="contacts-map-link" href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687314,37.530074,18z/data=!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618?hl=ru">
             <img src="img/map.jpg" alt="Офис магазина по адресу город Москва, улица строителей, дом 15" width="560" height="222">
           </a>
           <a class="button contacts-button" href="blank.html">Напишите нам</a>
