--- a/blank.html
+++ b/blank.html
@@ -39,16 +39,16 @@
             <div class="dropdown-container">
               <ul class="dropdown-navigation">
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Виртуальная реальность</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Виртуальная реальность</a>
                   <a class="dropdown-navigation-link" href="catalog.html">Моноподы для селфи</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Экшн-камеры</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Экшн-камеры</a>
                 </li>
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Фитнес-браслеты</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Умные часы</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Фитнес-браслеты</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Умные часы</a>
                 </li>
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Квадрокоптер</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Квадрокоптер</a>
                 </li>
               </ul>
             </div>
