--- a/catalog.html
+++ b/catalog.html
@@ -39,16 +39,16 @@
             <div class="dropdown-container">
               <ul class="dropdown-navigation">
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Виртуальная реальность</a>
+                  <a class="dropdown-navigation-link" href="#">Виртуальная реальность</a>
                   <a class="dropdown-navigation-link">Моноподы для селфи</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Экшн-камеры</a>
+                  <a class="dropdown-navigation-link" href="#">Экшн-камеры</a>
                 </li>
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Фитнес-браслеты</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Умные часы</a>
+                  <a class="dropdown-navigation-link" href="#">Фитнес-браслеты</a>
+                  <a class="dropdown-navigation-link" href="#">Умные часы</a>
                 </li>
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Квадрокоптер</a>
+                  <a class="dropdown-navigation-link" href="#">Квадрокоптер</a>
                 </li>
               </ul>
             </div>
@@ -147,7 +147,7 @@
               <h2 class="sorting-heading">Сортировка:</h2>
               <ul class="sorting-groups">
                 <li>
-                  <a class="sorting-groups-link sorting-groups-link-current">По цене</a>
+                  <a class="sorting-groups-link sorting-groups-link-current" href="#">По цене</a>
                 </li>
                 <li>
                   <a class="sorting-groups-link" href="#">По типу</a>
@@ -158,7 +158,7 @@
               </ul>
               <div class="sorting-groups-markers">
                 <a class="sorting-marker sorting-up" href="#" aria-label="Сортировка по возрастанию"></a>
-                <a class="sorting-marker sorting-down sorting-marker-current" aria-label="Сортировка по убыванию"></a>
+                <a class="sorting-marker sorting-down sorting-marker-current" href="#" aria-label="Сортировка по убыванию"></a>
               </div>
             </div>
             <div class="sorting-products">
@@ -298,5 +298,6 @@
         <a class="footer-htmlacademy-link" href="https://https://htmlacademy.ru/intensive/htmlcss" aria-label="Онлайн-курс «Профессиональная вёрстка сайтов»"></a>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
