--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <div class="dropdown-container">
               <ul class="dropdown-navigation">
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Виртуальная реальность</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Виртуальная реальность</a>
                   <a class="dropdown-navigation-link" href="catalog.html">Моноподы для селфи</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Экшн-камеры</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Экшн-камеры</a>
                 </li>
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Фитнес-браслеты</a>
-                  <a class="dropdown-navigation-link" href="blank.html">Умные часы</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Фитнес-браслеты</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Умные часы</a>
                 </li>
                 <li class="dropdown-item">
-                  <a class="dropdown-navigation-link" href="blank.html">Квадрокоптер</a>
+                  <a class="dropdown-navigation-link" href="catalog.html">Квадрокоптер</a>
                 </li>
               </ul>
             </div>
@@ -146,22 +146,22 @@
         <h2 class="visually-hidden">Популярные товары</h2>
         <ul class="popular-list">
           <li>
-            <a class="popular-link popular-virtual" href="blank.html">Виртуальная реальность</a>
+            <a class="popular-link popular-virtual" href="catalog.html">Виртуальная реальность</a>
           </li>
           <li>
             <a class="popular-link popular-monopods" href="catalog.html">Моноподы<br> для селфи</a>
           </li>
           <li>
-            <a class="popular-link popular-action" href="blank.html">Экшн-камеры</a>
+            <a class="popular-link popular-action" href="catalog.html">Экшн-камеры</a>
           </li>
           <li>
-            <a class="popular-link popular-fitness" href="blank.html">Фитнес-браслеты</a>
+            <a class="popular-link popular-fitness" href="catalog.html">Фитнес-браслеты</a>
           </li>
           <li>
-            <a class="popular-link popular-watch" href="blank.html">Умные часы</a>
+            <a class="popular-link popular-watch" href="catalog.html">Умные часы</a>
           </li>
           <li>
-            <a class="popular-link popular-quadrocopters" href="blank.html">Квадрокоптеры</a>
+            <a class="popular-link popular-quadrocopters" href="catalog.html">Квадрокоптеры</a>
           </li>
         </ul>
       </section>
