--- a/blank.html
+++ b/blank.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Веб-страница - Интернет-магазин «Девайс»</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
     <header class="main-header">
@@ -67,7 +67,7 @@
     </header>
     <main class="page-main">
       <div class="container">
-        <h1 class="page-heading">Веб страница магазина «Девайс»</h1>
+        <h1 class="page-heading">Веб-страница магазина «Девайс»</h1>
         <ul class="breadcrumbs">
           <li>
             <a class="breadcrumbs-link" href="index.html">Главная</a>
