--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог товаров - Интернет-магазин «Девайс»</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
     <header class="main-header">
@@ -298,6 +298,6 @@
         <a class="footer-htmlacademy-link" href="https://https://htmlacademy.ru/intensive/htmlcss" aria-label="Онлайн-курс «Профессиональная вёрстка сайтов»"></a>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
