--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Главная - Интернет-магазин «Девайс»</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
     <header class="main-header">
@@ -170,13 +170,13 @@
           <h2 class="visually-hidden">Услуги нашего магазина</h2>
           <ul class="services-buttons-list">
             <li class="services-buttons-item">
-              <a class="button services-button services-button-active" href="#" data-slider="services-item-delivery">Доставка</a>
+              <a class="button services-button services-button-active" href="blank.html" data-slider="services-item-delivery">Доставка</a>
             </li>
             <li class="services-buttons-item">
-              <a class="button services-button" href="#" data-slider="services-item-warranty">Гарантия</a>
+              <a class="button services-button" href="blank.html" data-slider="services-item-warranty">Гарантия</a>
             </li>
             <li class="services-buttons-item">
-              <a class="button services-button" href="#" data-slider="services-item-credit">Кредит</a>
+              <a class="button services-button" href="blank.html" data-slider="services-item-credit">Кредит</a>
             </li>
           </ul>
           <ul class="services-list">
@@ -320,6 +320,6 @@
       </form>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
