--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </footer>
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <img class="modal-map-image" src="img/map-big.jpg" alt="Офис магазина по адресу город Москва, улица строителей, дом 15" width="960" height="559">
+      <img class="modal-map-image" src="img/map-big.jpg" alt="Офис магазина по адресу город Москва, ул. Cтроителей, дом 15" width="960" height="559">
       <iframe class="modal-map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473636!2d37.52742931601917!3d55.68703400452987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1604423983533!5m2!1sru!2sru" width="960" height="559" allowfullscreen title="Офис компании по адресу ул. Строителей 15, Москва"></iframe>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
