--- a/catalog.html
+++ b/catalog.html
@@ -91,8 +91,8 @@
                   <div class="scale">
                     <div class="bar" style="width: 60%; margin-left: 0"></div>
                   </div>
-                  <div class="toggle toggle-min" tabindex="0" style="left: 0;"></div>
-                  <div class="toggle toggle-max" tabindex="0" style="left: 57%;"></div>
+                  <button class="toggle toggle-min" type="button" style="left: 0;" aria-label="Минимальная цена"></button>
+                  <button class="toggle toggle-max" type="button" style="left: 57%;" aria-label="Максимальная цена"></button>
                 </div>
                 <div class="filter-range-output">
                   <label class="filter-price-label" for="min-price-field">от</label>
